--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@angular/router": "^17.2.0",
     "@ngrx/effects": "^17.2.0",
     "@ngrx/store": "^17.2.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
+    "font-awesome-icons": "^1.6.0",
     "keycloak-angular": "^15.2.1",
     "keycloak-js": "^24.0.3",
     "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
     "primeng": "^17.14.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
